fixed some navbar styling and made comments only visible for logged in users

--- a/client/src/components/navbar.scss
+++ b/client/src/components/navbar.scss
@@ -2,7 +2,6 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    //background-color: rgb(17, 17, 17);
     background-color: gray;
     color: lavender;
     h1 {
@@ -19,19 +18,13 @@ nav {
     padding-top: 1em;
     display: flex;
     flex-direction: column;
-    //background-color: rgb(17, 17, 17);
     background-color: gray;
     color: lavender;
-    //background-color: lavender;
-   // color: whitesmoke;
-   //color: black;
     .navLinkContainer {
         display: none;
     }
     .navHamburger {
         margin-left: auto;
-        //background-color: lavender;
-        // background-color: rgb(17, 17, 17);
         background-color: gray;
         border: none;
         position: absolute;
@@ -41,23 +34,31 @@ nav {
         img {
             filter: invert(100);
         }
+
+        button:hover{
+            font-weight: 400;
+        }
     }
+
     .navDisplay {
         margin-left: auto;
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
+        align-items: center;
         background-color: rgba(38, 38, 44, 0.3);
         border: none;
         border-radius: 10px;
         margin-bottom: -22em;
-        margin-top: 2.3em;
+        margin-top: 1.3em;
+
         button {
             background-color: transparent;
             border: none;
             color: whitesmoke;
-            margin-right: 5em;
-            padding: 1.2em;
+            padding: 1em;
+            width: max-content;
+            max-width: 20em;
+            margin-right: 2em;
             a {
                 text-decoration: none;
                 background-color: transparent;
@@ -65,9 +66,15 @@ nav {
                 font-size: 1.2em;
             }
         }
+        
         @media (max-width: 400px) {
+            margin-top: 2.5em;
             margin-bottom: 0em;
-            align-items: center;
+            margin-right: 0em;
+            button{
+                max-width: 10em;
+            }
         }
     }
+    
 }
